<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Top Game Deals</string>

    <!-- activity title -->
    <string name="activity_main_title">Top Deals</string>
    <string name="activity_deal_detail_title">Deal Detail</string>
    <string name="activity_searchable_title">Search results</string>
    <string name="activity_settings_title">Settings</string>

    <!-- menu items title -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>

    <!-- content providers -->
    <string name="content_authority">com.ricardocasarez.topgamedeals</string>
    <string name="content_search_authority">ccom.ricardocasarez.topgamedeals.data.SearchSuggestionsProvider</string>
    <string name="custom_search_authority">com.ricardocasarez.topgamedeals</string>
    <string name="sync_account_type">com.ricardocasarez.topgamedeals</string>

    <!-- string format text -->
    <string name="format_price">\u0024<xliff:g id="usd">%.2f</xliff:g></string>
    <string name="format_savings">%1$d%% Off</string>

    <!-- generic strings -->
    <string name="error_connection">Check your connection and try again.</string>
    <string name="error_search">Cannot find game deals for:\n\"%1$s\"</string>
    <string name="retry">Retry</string>
    <string name="search_hint">Search for game deals</string>

    <!-- detail view -->
    <string name="release_date">Release date: %1$s</string>
    <string name="metacritic_score">Metacritic Score: %1$d</string>
    <string name="go_store">Open Store</string>
    <string name="go_metacritic">Open Metacritic</string>
    <string name="percent_off"> off</string>
    <string name="intent_error">Could not find an Activity to handle intent.</string>

    <string name="add_alert_title">Add Price Alert</string>
    <string name="add_alert_msg">An Email alert will be sent to the email address provided</string>
    <string name="add_alert_msg1">Email address:</string>
    <string name="add_alert_msg2">Desired price:</string>
    <string name="add_alert_ok">Ok</string>
    <string name="add_alert_cancel">Cancel</string>
    <string name="add_alert_confirmation">Email alert added</string>
    
    <!-- preferences -->
    <string name="pref_notifications_key">pref_notifications</string>
    <string name="pref_notifications_title">Use notifications</string>
    <string name="pref_notifications_summary_on">Enabled</string>
    <string name="pref_notifications_summary_off">Disabled</string>
    <string name="pref_notifications_default">true</string>

    <string name="pref_aaa_key">pref_aaa</string>
    <string name="pref_aaa_title">Show Only AAA</string>
    <string name="pref_aaa_summary_on">Include only deals with retail price > $29</string>
    <string name="pref_aaa_summary_off">Show all game deals</string>
    <string name="pref_aaa_default">false</string>

    <string name="pref_metacritic_key">pref_metacritic</string>
    <string name="pref_metacritic_title">Metacritic</string>
    <string name="pref_metacritic_summary">Only will show game with score greater than</string>
    <string name="pref_metacritic_default">false</string>

    <string name="pref_metacritic_edit_key">pref_metacritic_edit</string>
    <string name="pref_metacritic_edit_title">Set the minimum Metacritic Score</string>
    <string name="pref_metacritic_edit_dialog_title">Input integer from 0 to 100.</string>
    <string name="pref_metacritic_edit_default">50</string>

    <string name="pref_email_edit_key">pref_email_edit</string>
    <string name="pref_email_edit_title">Email address</string>
    <string name="pref_email_edit_summary">Email used to send price alerts</string>
    <string name="pref_email_edit_dialog_title">Input your email</string>
    <string name="pref_email_edit_default"></string>

    <string name="pref_clear_alerts">pref_clear_alerts</string>
    <string name="pref_clear_alerts_title">Clear alerts</string>
    <string name="pref_clear_alerts_summary">This will clear and un-subscribe to all price alerts.</string>

    <string name="pref_last_notification">last_notification</string>
</resources>
